--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -119,7 +119,7 @@ DocumentRoot "/app/www"
 <Directory />
     Options FollowSymLinks
     AllowOverride None
-    Order deny,allow
+    #Order deny,allow
     Deny from all
 </Directory>
 
