--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -120,7 +120,7 @@ DocumentRoot "/app/www"
     Options FollowSymLinks
     AllowOverride None
     #Order deny,allow
-    Deny from all
+    #Deny from all
 </Directory>
 
 #
