--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -158,8 +158,8 @@ DocumentRoot "/app/www"
     #
     # Controls who can get stuff from this server.
     #
-    Order allow,deny
-    Allow from all
+    #Order allow,deny
+    #Allow from all
 
 </Directory>
 
