--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -176,9 +176,9 @@ DocumentRoot "/app/www"
 # viewed by Web clients. 
 #
 <FilesMatch "^\.ht">
-    Order allow,deny
-    Deny from all
-    Satisfy All
+    #Order allow,deny
+    #Deny from all
+    #Satisfy All
 </FilesMatch>
 
 <FilesMatch \.php$>
