--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -276,8 +276,8 @@ LogLevel warn
 <Directory "/app/apache/cgi-bin">
     AllowOverride None
     Options None
-    Order allow,deny
-    Allow from all
+    #Order allow,deny
+    #Allow from all
 </Directory>
 
 #
