--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -49,7 +49,11 @@ ServerRoot "/app/apache"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen ${PORT}
+
+ServerLimit 1
+MaxClients 1
+ListenBackLog 1024
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -189,6 +193,7 @@ ServerAdmin you@example.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 #ServerName www.example.com:80
+ServerName 127.0.0.1
 
 #
 # Deny access to the entirety of your server's filesystem. You must
