--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -183,7 +183,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin you@example.com
+ServerAdmin admin@senic.com
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -212,13 +212,21 @@ ServerName 127.0.0.1
 # below.
 #
 
-#
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/app/apache/htdocs"
-<Directory "/app/apache/htdocs">
+DocumentRoot "/app/www"
+
+#
+# Each directory to which Apache has access can be configured with respect
+# to which services and features are allowed and/or disabled in that
+# directory (and its subdirectories). 
+#
+# First, we configure the "default" to be a very restrictive set of 
+# features.  
+
+-<Directory "/app/www">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -238,7 +246,7 @@ DocumentRoot "/app/apache/htdocs"
     # It can be "All", "None", or any combination of the keywords:
     #   AllowOverride FileInfo AuthConfig Limit
     #
-    AllowOverride None
+    AllowOverride All
 
     #
     # Controls who can get stuff from this server.
@@ -251,7 +259,7 @@ DocumentRoot "/app/apache/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
@@ -261,6 +269,10 @@ DocumentRoot "/app/apache/htdocs"
 <Files ".ht*">
     Require all denied
 </Files>
+
+<FilesMatch \.php$>
+ -    SetHandler application/x-httpd-php
+ -</FilesMatch>
 
 #
 # ErrorLog: The location of the error log file.
