--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -226,7 +226,7 @@ DocumentRoot "/app/www"
 # First, we configure the "default" to be a very restrictive set of 
 # features.  
 
--<Directory "/app/www">
+<Directory "/app/www">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
