--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -271,8 +271,8 @@ DocumentRoot "/app/www"
 </Files>
 
 <FilesMatch \.php$>
- -    SetHandler application/x-httpd-php
- -</FilesMatch>
+    SetHandler application/x-httpd-php
+</FilesMatch>
 
 #
 # ErrorLog: The location of the error log file.
